--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-modal": "^3.16.1",
+    "tailwindcss-important": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
