--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-modal": "^3.16.1",
     "tailwindcss-important": "^1.0.0",
     "url": "^0.11.3"
